--- a/src/tibs.stem.Core/Localization/stem/stem.xml
+++ b/src/tibs.stem.Core/Localization/stem/stem.xml
@@ -965,7 +965,7 @@
     
     <text name="MDashboard" value="Marketing Dashboard" />
     <text name="SDashboard" value="Sales Dashboard" />
-
-
+    <text name="DDashboard" value="Designer Dashboard" />
+  
   </texts>
 </localizationDictionary>
